--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,8 @@ header h1 a {
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif; font-size: 􏰂􏰅px;
+    font-family: 'Source Sans Pro', sans-serif; 
+    font-size: 18px;
     }
 
 header {
