--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <title>My Django Blog</title>
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:􏰄􏰃􏰃" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     </head>
     <body>
         <header>
