--- a/templates/home.html
+++ b/templates/home.html
@@ -8,4 +8,10 @@
         <p>{{ post.body }}</p>
         </div>
     {% endfor %}
+    {% for post in object_list %}
+    <div class="post-entry">
+    <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2> 
+    <p>{{ post.body }}</p>
+    </div>
+{% endfor %}
 {% endblock content %}
